# haskell-cxx

./: .gitignore  Main.hs  Makefile  foo.hxx  haskell-cxx.cabal  slides.md
