cabal-version: >= 1.10

name: haskell-cxx
version: 0

build-type: Simple

test-suite test
    build-depends: base, containers, inline-c, inline-c-cpp, template-haskell
    default-language: Haskell2010
    extra-libraries: stdc++
    ghc-options: -optc=-std=c++11 -pgmc=clang++
    main-is: Main.hs
    type: exitcode-stdio-1.0
